--- a/notebook/Numpy_Numexpr_benchmark.ipynb
+++ b/notebook/Numpy_Numexpr_benchmark.ipynb
@@ -88,9 +88,13 @@
      "source": "\n###Code profiling: testNumexpr() \n\n- Profiling function testNumexpr() with IPython %prun magic function:"
     },
     {
-     "cell_type": "raw",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "%prun testNumexpr(5000)",
+     "language": "python",
      "metadata": {},
-     "source": "%prun testNumexpr(5000)"
+     "outputs": [],
+     "prompt_number": "*"
     },
     {
      "cell_type": "markdown",
